--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -32,7 +32,7 @@ jobs:
                   value: ${{ github.repository }}
                 -
                   name: "Status:"
-                  value: "<span style=\"color:{{ github.event.pull_request.state == 'closed' ? 'green' : 'red' }};\">${{ github.event.pull_request.state }}</span>"
+                  value: "<span style=\"color:${{ env.color_var }};\">${{ github.event.pull_request.state }}</span>"
 
                 -
                   name: "Attempts:"
