--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -32,7 +32,7 @@ jobs:
                   value: ${{ github.repository }}<hr style="height:2px;margin-top:7px;color:#${{ env.color_var }};background-color:#${{ env.color_var }};width:120%;">
                 -
                   name: "Status:"
-                  value: "<style=\"color:${{ env.color_var }};\">${{ github.event.pull_request.state }}</style>"
+                  value: "`<style=\"color:${{ env.color_var }};\">${{ github.event.pull_request.state }}</style>`"
 
                 -
                   name: "Attempts:"
