--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   notify:
     if: >
-      "github.event.pull_request.state == 'open' || 'closed' || 'merged' "
+      github.event.pull_request.state == 'open' || github.event.pull_request.state == 'closed' || github.event.pull_request.state == 'merged'
     runs-on: ubuntu-latest
     steps:
       - name: Set color_var
