--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -30,8 +30,11 @@ jobs:
               activitySubtitle:
               facts:
                 -
-                  name: "Status:"
+                  name: "PR status:"
                   value: "`${{ github.event.pull_request.state }}`"
+                -
+                  name: "Review status:"
+                  value: "`${{ github.event.pull_request_review.state }}`"
                 -
                   name: "Repo:"
                   value: ${{ github.repository }}
