--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,4 +1,4 @@
-name: 'Pull Request'
+name: '{{}}'
 
 on:
   pull_request:
@@ -25,43 +25,3 @@ jobs:
             View Pull Request ${{ github.event.pull_request._links.html.href  }}
             View Project https://github.com/orgs/uic-ts/projects/1
           sections: |
-            -
-              activityTitle:
-              activitySubtitle:
-              facts:
-                -
-                  name: "PR status:"
-                  value: "`${{ github.event.pull_request.state }}`"
-                -
-                  name: "Review status:"
-                  value: "${{ github.event.pull_request_review.state }}"
-                -
-                  name: "Repo:"
-                  value: ${{ github.repository }}
-                -
-                  name: "Run attempts:"
-                  value: ${{ github.run_attempt }}
-                -
-                  name: "Source branch:"
-                  value: ${{ github.head_ref }}
-                -
-                  name: "Target branch:"
-                  value: ${{ github.base_ref }}
-                -
-                  name: "PR #:"
-                  value: ${{ github.event.pull_request.number }}
-                -
-                  name: "Requested by:"
-                  value: ${{ github.triggering_actor }}
-                -
-                  name: "Reviewers:"
-                  value: "
-                    {% for reviewer in github.event.pull_request.requested_reviewers %}
-                      {{ reviewer.login }}
-                    {% endfor %}"
-                -
-                  name: "Files changed:"
-                  value: ${{ github.event.pull_request.changed_files }}
-                -
-                  name: "Commits in this PR:"
-                  value: ${{ github.event.pull_request.commits }}
