--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,4 +1,4 @@
-name: ''
+name: 'Pull Request'
 
 on:
   pull_request:
@@ -17,7 +17,7 @@ jobs:
       - name: 📣 Send teams notification
         uses: simbo/msteams-message-card-action@latest
         with:
-          webhook: https://uic365.webhook.office.com/webhookb2/e2758c1c-477f-4de7-b1bd-c8f35fe1d105@e202cd47-7a56-4baa-99e3-e3b71a7c77dd/IncomingWebhook/ef5cd950674649228b1ae1c203a82a2a/68f631fe-fabd-412d-b045-29ece196782a
+          webhook: ${{ secrets.TEAMS_WEBHOOK_URL }}
           color: ${{ env.color_var }}
           title: ${{ github.workflow }}
           message: '<hr style="height:2px;margin-top:7px;color:#${{ env.color_var }};background-color:#${{ env.color_var }};width:120%;">'
@@ -25,3 +25,43 @@ jobs:
             View Pull Request ${{ github.event.pull_request._links.html.href  }}
             View Project https://github.com/orgs/uic-ts/projects/1
           sections: |
+            -
+              activityTitle:
+              activitySubtitle:
+              facts:
+                -
+                  name: "PR status:"
+                  value: "`${{ github.event.pull_request.state }}`"
+                -
+                  name: "Review status:"
+                  value: "${{ github.event.pull_request_review.state }}"
+                -
+                  name: "Repo:"
+                  value: ${{ github.repository }}
+                -
+                  name: "Run attempts:"
+                  value: ${{ github.run_attempt }}
+                -
+                  name: "Source branch:"
+                  value: ${{ github.head_ref }}
+                -
+                  name: "Target branch:"
+                  value: ${{ github.base_ref }}
+                -
+                  name: "PR #:"
+                  value: ${{ github.event.pull_request.number }}
+                -
+                  name: "Requested by:"
+                  value: ${{ github.triggering_actor }}
+                -
+                  name: "Reviewers:"
+                  value: "
+                    {% for reviewer in github.event.pull_request.requested_reviewers %}
+                      {{ reviewer.login }}
+                    {% endfor %}"
+                -
+                  name: "Files changed:"
+                  value: ${{ github.event.pull_request.changed_files }}
+                -
+                  name: "Commits in this PR:"
+                  value: ${{ github.event.pull_request.commits }}
