--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -12,13 +12,15 @@ jobs:
       github.event.pull_request.state == 'open' || github.event.pull_request.state == 'closed' || github.event.pull_request.state == 'merged'
     runs-on: ubuntu-latest
     steps:
+      - name: Set color_var
+        run: echo "color_var=$(if [ ${{ github.event.pull_request.state }} == 'closed' ]; then echo '00ff00'; else echo 'ff0000'; fi)" >> $GITHUB_ENV
       - name: 📣 Send teams notification
         uses: simbo/msteams-message-card-action@latest
         with:
           webhook: ${{ secrets.TEAMS_WEBHOOK_URL }}
           color: ${{ env.color_var }}
-          title: ${{ github.workflow }}
-          message: '<hr style="height:2px;margin-top:7px;color:#${{ env.color_var }};background-color:#${{ env.color_var }};width:120%;">'
+          title: <hr style="height:2px;margin-top:7px;color:#${{ env.color_var }};background-color:#${{ env.color_var }}">${{ github.workflow }}
+          message: '<hr style="height:2px;margin-top:7px;color:#${{ env.color_var }};background-color:#${{ env.color_var }}">'
           buttons: |
             View Pull Request ${{ github.event.pull_request._links.html.href  }}
             View Project https://github.com/orgs/uic-ts/projects/1
@@ -31,14 +33,9 @@ jobs:
                   name: "PR status:"
                   value: "`${{ github.event.pull_request.state }}`"
                 -
-                  name: "Review status:"
-                  value: "${{ github.event.pull_request_review.state }}"
-                -
                   name: "Repo:"
                   value: ${{ github.repository }}
-                -
-                  name: "Run attempts:"
-                  value: ${{ github.run_attempt }}
+
                 -
                   name: "Source branch:"
                   value: ${{ github.head_ref }}
@@ -46,11 +43,17 @@ jobs:
                   name: "Target branch:"
                   value: ${{ github.base_ref }}
                 -
+                  name: "Requested by:"
+                  value: ${{ github.triggering_actor }}
+                -
+                  name: "Run attempts:"
+                  value: ${{ github.run_attempt }}
+                -
                   name: "PR #:"
                   value: ${{ github.event.pull_request.number }}
                 -
-                  name: "Requested by:"
-                  value: ${{ github.triggering_actor }}
+                  name: "Review status:"
+                  value: "`${{ github.event.pull_request_review.state }}`"
                 -
                   name: "Reviewers:"
                   value: "
