--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -20,7 +20,7 @@ jobs:
           webhook: ${{ secrets.TEAMS_WEBHOOK_URL }}
           color: ${{ env.color_var }}
           title: ${{ github.workflow }}
-          message: '<hr style="height:2px;margin-top:7px;color:#${{ env.color_var }};background-color:#${{ env.color_var }}">PR status: `${{ github.event.pull_request.state }}`<hr style="height:2px;margin-top:7px;color:#${{ env.color_var }};background-color:#${{ env.color_var }}">'
+          message: '<hr style="height:2px;margin-top:20px;color:#${{ env.color_var }};background-color:#${{ env.color_var }}">PR status: `${{ github.event.pull_request.state }}`<hr style="height:2px;margin-top:7px;color:#fff;background-color:#${{ env.color_var }}">'
           buttons: |
             View Pull Request ${{ github.event.pull_request._links.html.href  }}
             View Project https://github.com/orgs/uic-ts/projects/1
