--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -3,8 +3,7 @@ name: 'Pull Request'
 on:
   pull_request:
     branches: [ develop ]
-
-
+    types: [opened, reopened, synchronize, closed]
 
 jobs:
   notify:
