--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -19,7 +19,7 @@ jobs:
           webhook: ${{ secrets.TEAMS_WEBHOOK_URL }}
           color: ${{ env.color_var }}
           title: ${{ github.workflow }}
-          message: '<hr style="height:2px;margin-top:20px;color:#${{ env.color_var }};background-color:#${{ env.color_var }}">PR status: `${{ github.event.pull_request.state }}`<hr style="height:2px;margin-top:7px;color:#fff;background-color:#${{ env.color_var }}">'
+          message: '<hr style="height:2px;margin-top:20px;color:#${{ env.color_var }};background-color:#${{ env.color_var }}">PR status: <span style="color:purple;">${{ github.event.pull_request.state }}</span><hr style="height:2px;margin-top:7px;color:#fff;background-color:#${{ env.color_var }}">'
           buttons: |
             View Pull Request ${{ github.event.pull_request._links.html.href  }}
             View Project https://github.com/orgs/uic-ts/projects/1
@@ -59,9 +59,6 @@ jobs:
                     {% for reviewer in github.event.pull_request.requested_reviewers %}
                       {{ reviewer.login }}
                     {% endfor %}"
-                -
-                  name: "Files changed:"
-                  value: ${{ github.event.pull_request.changed_files }}
                 -
                   name: "Commits in this PR:"
                   value: ${{ github.event.pull_request.commits }}
