--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -11,15 +11,15 @@ jobs:
       github.event.pull_request.state == 'open' || github.event.pull_request.state == 'closed' || github.event.pull_request.state == 'merged'
     runs-on: ubuntu-latest
     steps:
-      - name: Set color_var
-        run: echo "color_var=$(if [ ${{ github.event.pull_request.state }} == 'closed' ]; then echo '00ff00'; else echo 'ff0000'; fi)" >> $GITHUB_ENV
+      - name: Set text_color
+        run: echo "text_color=$(if [ ${{ github.event.pull_request.state }} == 'closed' ]; then echo '00ff00'; else echo 'ff0000'; fi)" >> $GITHUB_ENV
       - name: 📣 Send teams notification
         uses: simbo/msteams-message-card-action@latest
         with:
           webhook: ${{ secrets.TEAMS_WEBHOOK_URL }}
-          color: ${{ env.color_var }}
+          color: ${{ env.text_color }}
           title: ${{ github.workflow }}
-          message: '<hr style="height:2px;margin-bottom:-10px;color:#${{ env.color_var }};background-color:#${{ env.color_var }}">PR status: <span style="color:#ffffff;background-color:${{ env.color_var }}">${{ github.event.pull_request.state }}</span><hr style="height:2px;margin-top:7px;color:#fff;background-color:#${{ env.color_var }}">'
+          message: '<hr style="height:2px;margin-bottom:-10px;color:#${{ env.text_color }};background-color:#${{ env.text_color }}">PR status: <span style="color:#ffffff;background-color:${{ env.text_color }}">${{ github.event.pull_request.state }}</span><hr style="height:2px;margin-top:7px;color:#fff;background-color:#${{ env.text_color }}">'
           buttons: |
             View Pull Request ${{ github.event.pull_request._links.html.href  }}
             View Project https://github.com/orgs/uic-ts/projects/1
