--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -9,11 +9,13 @@ jobs:
   notify:
     runs-on: ubuntu-latest
     steps:
+      - name: Set text_color
+        run: echo "text_color=$(if [ ${{ github.event.pull_request.state }} == 'closed' ]; then echo '00ff00'; else echo 'ff0000'; fi)" >> $GITHUB_ENV
       - name: 📣 Send teams notification
         uses: simbo/msteams-message-card-action@latest
         with:
           webhook: ${{ secrets.TEAMS_WEBHOOK_URL }}
-          color: ${{ env.text_color }}
+          color: orange
           title: ${{ github.workflow }}
           message: '<hr style="height:1px;color:#${{ env.text_color }};background-color:#${{ env.text_color }};">PR status: <span style="color:#ffffff;background-color:purple;!important">${{ github.event.pull_request.state }}</span><hr style="height:2px;margin-top:7px;color:#fff;background-color:#${{ env.text_color }};">'
           buttons: |
