--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -15,7 +15,7 @@ jobs:
         uses: simbo/msteams-message-card-action@latest
         with:
           webhook: ${{ secrets.TEAMS_WEBHOOK_URL }}
-          color: '#ca33ff'
+          color: ${{ env.text_color }}
           title: ${{ github.workflow }}
           message: '<hr style="height:1px;color:#${{ env.text_color }};background-color:#${{ env.text_color }};">PR status: <span style="color:#ffffff;background-color:purple;!important">${{ github.event.pull_request.state }}</span><hr style="height:2px;margin-top:7px;color:#fff;background-color:#${{ env.text_color }};">'
           buttons: |
