--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -10,13 +10,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Set text_color
-        run: echo "text_color=$(if [ ${{ github.event.pull_request.state }} == 'closed' ]; then echo '00ff00'; else echo 'ff0000'; fi)" >> $GITHUB_ENV
+        run: echo "text_color=$(if [ ${{ github.event.pull_request.state }} == 'closed' ]; then echo '027015'; else echo '7a0417'; fi)" >> $GITHUB_ENV
       - name: 📣 Send teams notification
         uses: simbo/msteams-message-card-action@latest
         with:
           webhook: ${{ secrets.TEAMS_WEBHOOK_URL }}
           title: ${{ github.workflow }}
-          message: '<hr style="height:1px;color:#${{ env.text_color }};background-color:#${{ env.text_color }};">status: <span style="color:#ffffff;background-color:#${{ env.text_color }};">${{ github.event.pull_request.state }}</span><hr style="height:2px;margin-t;op:7px;color:#fff;background-color:#${{ env.text_color }};">'
+          message: '<hr style="height:1px;color:#${{ env.text_color }};background-color:#${{ env.text_color }};">status: <span style="color:#ffffff;background-color:#${{ env.text_color }};padding:2px;">${{ github.event.pull_request.state }}</span><hr style="height:2px;margin-top:7px;color:#fff;background-color:#${{ env.text_color }};">'
           buttons: |
             View Pull Request ${{ github.event.pull_request._links.html.href  }}
             View Project https://github.com/orgs/uic-ts/projects/1
@@ -25,9 +25,6 @@ jobs:
               activityTitle:
               activitySubtitle:
               facts:
-                -
-                  name: "PR status:"
-                  value: "`${{ github.event.pull_request.state }}`"
                 -
                   name: "Repo:"
                   value: ${{ github.repository }}
