--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -3,19 +3,23 @@ name: 'Pull Request'
 on:
   pull_request:
     branches: [ develop ]
+    types: [opened, reopened, synchronize, closed]
 
 jobs:
   notify:
+    if: >
+      github.event.pull_request.state == 'open' || github.event.pull_request.state == 'closed' || github.event.pull_request.state == 'merged'
     runs-on: ubuntu-latest
     steps:
-      - name: Set text_color
-        run: echo "text_color=$(if [ ${{ github.event.pull_request.state }} == 'closed' ]; then echo '027015'; else echo 'ad020a'; fi)" >> $GITHUB_ENV
+      - name: Set color_var
+        run: echo "color_var=$(if [ ${{ github.event.pull_request.state }} == 'closed' ]; then echo '00ff00'; else echo 'ff0000'; fi)" >> $GITHUB_ENV
       - name: 📣 Send teams notification
         uses: simbo/msteams-message-card-action@latest
         with:
           webhook: ${{ secrets.TEAMS_WEBHOOK_URL }}
+          color: ${{ env.color_var }}
           title: ${{ github.workflow }}
-          message: '<hr style="height:1px;color:#${{ env.text_color }};background-color:#${{ env.text_color }};">status: <span style="color:#ffffff;background-color:#${{ env.text_color }};padding:2px;">${{ github.event.pull_request.state }}</span><hr style="height:2px;margin-top:7px;color:#fff;background-color:#${{ env.text_color }};">'
+          message: '<hr style="height:2px;margin-top:20px;color:#${{ env.color_var }};background-color:#${{ env.color_var }};">PR status: ${{ github.event.pull_request.state }}<hr style="height:2px;margin-top:7px;color:#fff;background-color:#${{ env.color_var }};">'
           buttons: |
             View Pull Request ${{ github.event.pull_request._links.html.href  }}
             View Project https://github.com/orgs/uic-ts/projects/1
