--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -19,7 +19,7 @@ jobs:
           webhook: ${{ secrets.TEAMS_WEBHOOK_URL }}
           color: ${{ env.color_var }}
           title: ${{ github.workflow }}
-          message: 'status: <span style="color:#ffffff;background-color:#${{ env.color_var }};padding:3px;">${{ github.event.pull_request.state }}</span><hr style="height:2px;background-color:#${{ env.color_var }};">'
+          message: 'status: <span style="color:#ffffff;background-color:#${{ env.color_var }};padding:3px;">${{ github.event.pull_request.state }}</span><hr style="height:2px;margin-top:7px;background-color:#${{ env.color_var }};">'
           buttons: |
             View Pull Request ${{ github.event.pull_request._links.html.href  }}
             View Project https://github.com/orgs/uic-ts/projects/1
