--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -2,27 +2,16 @@ name: 'Pull Request'
 
 on:
   pull_request:
-    branches: [ develop ]
+    branches: [develop]
     types: [opened, reopened, closed]
 
 jobs:
-  notify:
+  send-teams-notification:
     runs-on: ubuntu-latest
+    if: github.event.pull_request.merged == true
     steps:
       - name: Set color_var
         run: echo "color_var=$(if [ ${{ github.event.pull_request.state }} == 'closed' ]; then echo '019128'; else echo 'ad020a'; fi)" >> $GITHUB_ENV
-
-      - name: Send Teams notification for merged PR
-        env:
-          TEAMS_WEBHOOK_URL: ${{ secrets.TEAMS_WEBHOOK_URL }}
-          PR_NUMBER: ${{ github.event.pull_request.number }}
-          MESSAGE_TEXT: "PR #${{ env.PR_NUMBER }} has been merged?"
-        if: github.event.pull_request.merged == true
-        run: |
-          curl -H "Content-Type: application/json" \
-              -d "{\"text\": \"${{ env.MESSAGE_TEXT }}\"}" \
-              "$TEAMS_WEBHOOK_URL"
-
 
       - name: 📣 Send teams notification
         uses: simbo/msteams-message-card-action@latest
@@ -75,3 +64,4 @@ jobs:
                 -
                   name: "Commits in this PR:"
                   value: ${{ github.event.pull_request.commits }}
+
