--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -2,16 +2,15 @@ name: 'Pull Request'
 
 on:
   pull_request:
-    branches: [develop]
+    branches: [ develop ]
     types: [opened, reopened, closed]
 
 jobs:
-  send-teams-notification:
+  notify:
     runs-on: ubuntu-latest
     steps:
       - name: Set color_var
         run: echo "color_var=$(if [ ${{ github.event.pull_request.state }} == 'closed' ]; then echo '019128'; else echo 'ad020a'; fi)" >> $GITHUB_ENV
-
       - name: 📣 Send teams notification
         uses: simbo/msteams-message-card-action@latest
         with:
@@ -25,6 +24,7 @@ jobs:
             </span>
             <hr style="height:2px;margin-top:7px;noshade;
             background-color:#${{ env.color_var }};">
+            MESSAGE_TEXT: ${{ env.MESSAGE_TEXT }}
           buttons: |
             View Pull Request ${{ github.event.pull_request._links.html.href }}
             View org Project https://github.com/orgs/uic-ts/projects/1
@@ -63,4 +63,3 @@ jobs:
                 -
                   name: "Commits in this PR:"
                   value: ${{ github.event.pull_request.commits }}
-
