--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -35,7 +35,11 @@ jobs:
         with:
           webhook: ${{ secrets.TEAMS_WEBHOOK_URL }}
           color: ${{ env.color_var }}
-          title: ${{ github.workflow }}
+          title: |
+            ${{ github.workflow }} TEST: 
+            {% if github.event.pull_request.merged == true %}
+              ${{ env.MESSAGE_TEXT }}
+            {% endif %}
           message: |
             status: 
             <span style="color:#ffffff;background-color:#${{ env.color_var }};padding:3px;">
@@ -43,9 +47,7 @@ jobs:
             </span>
             <hr style="height:2px;margin-top:7px;noshade;
             background-color:#${{ env.color_var }};">
-            {% if github.event.pull_request.merged == true %}
-              ${{ env.MESSAGE_TEXT }}
-            {% endif %}
+
           buttons: |
             View Pull Request ${{ github.event.pull_request._links.html.href }}
             View org Project https://github.com/orgs/uic-ts/projects/1
@@ -56,7 +58,9 @@ jobs:
               facts:
                 -
                   name: "testing"
-                  value: ${{ env.MESSAGE_TEXT }}
+                  value:             "{% if github.event.pull_request.merged == true %}
+              ${{ env.MESSAGE_TEXT }}
+            {% endif %}"
                 -
                   name: "Repo:"
                   value: ${{ github.repository }}
