--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -59,9 +59,9 @@ jobs:
                 -
                   name: "testing"
                   value: |
-                    {% if github.event.pull_request.merged == true %}
+                    "{% if github.event.pull_request.merged == true %}
                       ${{ env.MESSAGE_TEXT }}
-                    {% endif %}
+                    {% endif %}"
                 -
                   name: "Repo:"
                   value: ${{ github.repository }}
