--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -32,7 +32,7 @@ jobs:
         env:
           TEAMS_WEBHOOK_URL: ${{ secrets.TEAMS_WEBHOOK_URL }}
           color_var: ${{ env.color_var }}
-          message_text: ${{ github.event.pull_request.merged == true && env.MESSAGE_TEXT || 'TEST' }}
+          MESSAGE_TEXT: ${{ github.event.pull_request.merged == true && env.MESSAGE_TEXT || 'TEST' }}
         with:
           webhook: ${{ secrets.TEAMS_WEBHOOK_URL }}
           color: ${{ env.color_var }}
