--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -22,7 +22,7 @@ jobs:
         env:
           TEAMS_WEBHOOK_URL: ${{ secrets.TEAMS_WEBHOOK_URL }}
           color_var: ${{ env.color_var }}
-          MESSAGE_TEXT: ${{ github.event.pull_request.merged == true && env.MESSAGE_TEXT || 'TEST' }}
+          MESSAGE_TEXT: ${{ github.event.pull_request.merged == true && "MERGED" || "NOT MERGED" }}
         with:
           webhook: ${{ secrets.TEAMS_WEBHOOK_URL }}
           color: ${{ env.color_var }}
