--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,37 +1,29 @@
 name: 'Pull Request'
-
 on:
   pull_request:
-    branches: [ develop ]
+    branches: [develop]
     types: [opened, reopened, closed]
-
 jobs:
   set-color:
     runs-on: ubuntu-latest
     steps:
       - name: Set color_var
         run: echo "color_var=$(if [ ${{ github.event.pull_request.state }} == 'closed' ]; then echo '019128'; else echo 'ad020a'; fi)" >> $GITHUB_ENV
-
   notify:
     runs-on: ubuntu-latest
-    needs: [ set-color ]
+    needs: [set-color]
     steps:
-
       - name: 📣 Send teams notification
         uses: simbo/msteams-message-card-action@latest
         env:
           TEAMS_WEBHOOK_URL: ${{ secrets.TEAMS_WEBHOOK_URL }}
-          color_var: ${{ env.color_var }}
           MESSAGE_TEXT: "MERGED"
           CONDITION_TEXT: ${{ github.event.pull_request.merged == true && env.MESSAGE_TEXT || 'NOT MERGED' }}
+          color_var: ${{ env.color_var }}
         with:
           webhook: ${{ secrets.TEAMS_WEBHOOK_URL }}
           color: ${{ env.color_var }}
-          title: |
-            ${{ github.workflow }} TEST: 
-            {% if github.event.pull_request.merged == true %}
-              ${{ env.MESSAGE_TEXT }}
-            {% endif %}
+          title: ${{ github.workflow }}
           message: |
             status: 
             <span style="color:#ffffff;background-color:#${{ env.color_var }};padding:3px;">
@@ -39,7 +31,6 @@ jobs:
             </span>
             <hr style="height:2px;margin-top:7px;noshade;
             background-color:#${{ env.color_var }};">
-
           buttons: |
             View Pull Request ${{ github.event.pull_request._links.html.href }}
             View org Project https://github.com/orgs/uic-ts/projects/1
@@ -59,7 +50,7 @@ jobs:
                   value: ${{ env.CONDITION_TEXT }}
                 -
                   name: "Repo:"
-                  value: ${{ github.event.pull_request.merged }}
+                  value: "${{ github.event.pull_request.base.repo.full_name }}"
                 -
                   name: "Source branch:"
                   value: ${{ github.head_ref }}
