--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -48,7 +48,7 @@ jobs:
                 -
                   name: "testing"
                   if: github.event.pull_request.merged
-                  value: "Merged""
+                  value: "Merged"
                   else:
                     value: "not merged"
                 -
