--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -3,78 +3,42 @@ on:
   pull_request:
     branches: [develop]
     types: [opened, reopened, closed]
+
+
 jobs:
-  set-color:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Set color_var
-        run: echo "color_var=$(if [ ${{ github.event.pull_request.state }} == 'closed' ]; then echo '019128'; else echo 'ad020a'; fi)" >> $GITHUB_ENV
   notify:
     runs-on: ubuntu-latest
-    needs: [set-color]
     steps:
+      - name: 🪣 Set env vars
+        run: |
+          echo "MY_SPECIAL_BUTTON=Cool https://this-is-so.cool/" >> $GITHUB_ENV
+
       - name: 📣 Send teams notification
         uses: simbo/msteams-message-card-action@latest
         env:
-          TEAMS_WEBHOOK_URL: ${{ secrets.TEAMS_WEBHOOK_URL }}
-          MESSAGE_TEXT: "MERGED"
-          CONDITION_TEXT: ${{ github.event.pull_request.merged == true && env.MESSAGE_TEXT || 'NOT MERGED' }}
-          color_var: ${{ env.color_var }}
+          MY_AWESOME_BUTTON: Awesome http://this-is-so.awesome/
         with:
-          webhook: ${{ secrets.TEAMS_WEBHOOK_URL }}
-          color: ${{ env.color_var }}
-          title: ${{ github.workflow }}
-          message: |
-            status: 
-            <span style="color:#ffffff;background-color:#${{ env.color_var }};padding:3px;">
-              ${{ github.event.pull_request.state }}
-            </span>
-            <hr style="height:2px;margin-top:7px;noshade;
-            background-color:#${{ env.color_var }};">
+          webhook: ${{ secrets.TEAMS_WEBHOOK }}
+          title: NULL
+          message: <p>This is my <strong>awesome message!</strong></p>
+          color: ff69b4
           buttons: |
-            View Pull Request ${{ github.event.pull_request._links.html.href }}
-            View org Project https://github.com/orgs/uic-ts/projects/1
-          sections: |
-            -
-              activityTitle: |
-                    "{% if github.event.pull_request.merged == true %}
-                      ${{ env.MESSAGE_TEXT }}
-                    {% endif %}"
-              activitySubtitle: |
-                    "{% if github.event.pull_request.merged == true %}
-                      ${{ env.MESSAGE_TEXT }}
-                    {% endif %}"
-              facts:
-                -
-                  name: "testing"
-                  if: ${{ github.event.pull_request.merged }}
-                  value: "Merged"
-                  else:
-                    value: "not merged"
-                -
-                  name: "Repo:"
-                  value: "${{ github.event.pull_request.base.repo.full_name }}"
-                -
-                  name: "Source branch:"
-                  value: ${{ github.head_ref }}
-                -
-                  name: "Target branch:"
-                  value: ${{ github.base_ref }}
-                -
-                  name: "Author:"
-                  value: ${{ github.triggering_actor }}
-                -
-                  name: "PR #:"
-                  value: ${{ github.event.pull_request.number }}
-                -
-                  name: "Review status:"
-                  value: "${{ github.event.pull_request_review.state }}"
-                -
-                  name: "Reviewers:"
-                  value: "
-                    {% for reviewer in github.event.pull_request.requested_reviewers %}
-                      {{ reviewer.login }}
-                    {% endfor %}"
-                -
-                  name: "Commits in this PR:"
-                  value: ${{ github.event.pull_request.commits }}
+            NULL https://whatever.com/foo/
+            NULL https://somewhere.com/bar/
+            This button will not be shown as it has no target URL
+            https://no-label-no-button.com/
+            ${{ env.MY_SPECIAL_BUTTON }}
+            ${{ env.MY_AWESOME_BUTTON }}
+
+      - name: 🎉 Notify on merge
+        if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged
+        uses: simbo/msteams-message-card-action@latest
+        env:
+          MY_SPECIAL_BUTTON: "Special Button https://this-is-so.special/"
+        with:
+          webhook: ${{ secrets.TEAMS_WEBHOOK }}
+          title: Pull Request merged!
+          message: <p>The pull request ${github.event.pull_request.number} has been merged.</p>
+          color: 00ff00
+          buttons: |
+            ${{ env.MY_SPECIAL_BUTTON }}
