--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -12,9 +12,55 @@ jobs:
       - name: Set color_var
         run: echo "color_var=$(if [ ${{ github.event.pull_request.state }} == 'closed' ]; then echo '019128'; else echo 'ad020a'; fi)" >> $GITHUB_ENV
 
-
-      - name: 📣 Send teams notification
+      - name: 📣 Send teams notification for closed pull request that was not merged
         if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == false
+        uses: simbo/msteams-message-card-action@latest
+        with:
+          webhook: ${{ secrets.TEAMS_WEBHOOK_URL }}
+          color: ${{ env.color_var }}
+          title: ${{ github.workflow }}
+          message: |
+            status: 
+            <span style="color:#ffffff;background-color:#${{ env.color_var }};padding:3px;">
+              ${{ github.event.pull_request.state }}
+            </span>
+            <hr style="height:2px;margin-top:7px;noshade;
+            background-color:#${{ env.color_var }};">
+          buttons: |
+            View Pull Request ${{ github.event.pull_request._links.html.href }}
+            View org Project https://github.com/orgs/uic-ts/projects/1
+          sections: |
+            -
+              activityTitle:
+              activitySubtitle:
+              facts:
+                -
+                  name: "MERGE STATUS"
+                  value: "NOT MERGED"
+                -
+                  name: "Repo:"
+                  value: ${{ github.repository }}
+                -
+                  name: "Source branch:"
+                  value: ${{ github.head_ref }}
+                -
+                  name: "Target branch:"
+                  value: ${{ github.base_ref }}
+                -
+                  name: "Author:"
+                  value: ${{ github.triggering_actor }}
+                -
+                  name: "PR #:"
+                  value: ${{ github.event.pull_request.number }}
+                -
+                  name: "Review status:"
+                  value: "${{ github.event.pull_request_review.state }}"
+                -
+                  name: "Commits in this PR:"
+                  value: ${{ github.event.pull_request.commits }}
+
+      - name: 📣 Send teams notification for closed and merged pull request
+        if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true
         uses: simbo/msteams-message-card-action@latest
         with:
           webhook: ${{ secrets.TEAMS_WEBHOOK_URL }}
@@ -39,29 +85,4 @@ jobs:
                   name: "MERGE STATUS"
                   value: "MERGED"
                 -
-                  name: "Repo:"
-                  value: ${{ github.repository }}
-                -
-                  name: "Source branch:"
-                  value: ${{ github.head_ref }}
-                -
-                  name: "Target branch:"
-                  value: ${{ github.base_ref }}
-                -
-                  name: "Author:"
-                  value: ${{ github.triggering_actor }}
-                -
-                  name: "PR #:"
-                  value: ${{ github.event.pull_request.number }}
-                -
-                  name: "Review status:"
-                  value: "${{ github.event.pull_request_review.state }}"
-                -
-                  name: "Reviewers:"
-                  value: "
-                    {% for reviewer in github.event.pull_request.requested_reviewers %}
-                      {{ reviewer.login }}
-                    {% endfor %}"
-                -
-                  name: "Commits in this PR:"
-                  value: ${{ github.event.pull_request.commits }}
+                 
